--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,6 +1,17 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <h1>About Smudge</h1>
+<a>Smudge is a cat that lives in Philadelphia, PA. She spent the first few years of her
+    life living in Ann Arbor, MI and considers herself a "midwestern cat." She thoroughly enjoys milk and
+    ice cream, though she could do without the cold.
+</a>
+<br>
+<br>
+<p>Her days are primarily spent sleeping in various places throughout her house, including the closet.
+    She has the best parents in the world.
+</p>
+<img src="~/django_project/blog/templates/blog/media/September2.JPG">
+<img src="blog/templates/blog/media/September2.JPG">
 {% endblock content %}
 
 
