--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{% static 'blog/main.css' %}">
     {% if title %}
-    <title>Matt's Blog - {{title}}</title>
+    <title>Smudge's Blog - {{title}}</title>
     {% else %}
-   <title>Matt's Blog</title>
+   <title>Smudge's Blog</title>
     {% endif %}
    
 </head>
@@ -21,7 +21,7 @@
         <header class="site-header">
                 <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
                   <div class="container">
-                    <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Matt's Blog</a>
+                    <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Smudge's Blog</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
@@ -33,6 +33,7 @@
                       <!-- Navbar Right Side -->
                       <div class="navbar-nav">
                         {% if user.is_authenticated %}
+                          <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                           <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                           <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                         {% else %}
